--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,19 +28,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_modular: ^3.1.1
   mobx: ^2.0.1
-  hive: ^2.0.4
   flutter_mobx: ^2.0.0
-  hive_flutter: ^1.0.0
   mobx_codegen: ^2.0.1+3
+
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
+  
   asuka: ^1.0.4
+
+  get_it: ^7.0.0
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.0.1
-  # modular_codegen: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
