--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  #state management
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
   mobx_codegen: ^2.0.1+3
 
+  #local storage
   hive: ^2.0.4
   hive_flutter: ^1.0.0
   
-  asuka: ^1.0.4
+  #scaffold state manager
+  asuka: ^2.0.0-nullsafety.2
 
+  #injection system
   get_it: ^7.0.0
+
+  #splash screen
+  flutter_native_splash: ^1.1.8+4
 
 
 
@@ -58,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
